syntax = "proto3";

package leaderboard.v1;

import "leaderboard/v1/types.proto";

service LeaderboardService {
  rpc GetLeaderboard(GetLeaderboardRequest) returns (GetLeaderboardResponse);
  rpc DeleteLeaderboard(DeleteLeaderboardRequest) returns (DeleteLeaderboardResponse);
  rpc UpdatePlayerStats(UpdatePlayerStatsRequest) returns (UpdatePlayerStatsResponse);
  rpc GetPlayerStats(GetPlayerStatsRequest) returns (GetPlayerStatsResponse);
  rpc GetAllPlayerStats(GetAllPlayerStatsRequest) returns (GetAllPlayerStatsResponse);
  rpc DeleteAllPlayerStats(DeleteAllPlayerStatsRequest) returns (DeleteAllPlayerStatsResponse);
}

message GetLeaderboardRequest {
  string game_id = 1;
  uint32 entry_limit = 2;
  optional uint32 score_cursor = 3;
}

message GetLeaderboardResponse {
  bool exists = 1;
  repeated LeaderboardEntry entries = 2;
  optional uint32 next_score_cursor = 3;
}

message DeleteLeaderboardRequest {
  string game_id = 1;
}

message DeleteLeaderboardResponse {
  bool ok = 1;
}

message UpdatePlayerStatsRequest {
  string game_id = 1;
  string player_id = 2;
  Stats stats = 3;
}

message UpdatePlayerStatsResponse {
  bool ok = 1;
}

message GetPlayerStatsRequest {
  string game_id = 1;
  string player_id = 2;
}

message GetPlayerStatsResponse {
  Entry entry = 1;
}

message GetAllPlayerStatsRequest {
  string player_id = 1;
}

message GetAllPlayerStatsResponse {
  repeated PlayerStatsEntry entries = 1;
}

message DeleteAllPlayerStatsRequest {
  string player_id = 1;
}

message DeleteAllPlayerStatsResponse {
  bool ok = 1;
}
